# chuscraper

./: .gitignore  ANALYSIS.md  ARCHITECTURE_REPORT.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  REPO_ANALYSIS.md  codecov.yml  crawl_results.json  crawl_results.md  crawl_results_formats.json  debug.txt  debug_revmerito.py  demo_mmt.py  demo_usage.py  log.txt  mkdocs.yml  output_test.csv  output_test.jsonl  output_test.md  parse_test.py  priya3_agoda.yaml  publish.ps1  pyproject.toml  shalimar_stress_test.py  sitemap_results.json  stress_test.py  test_fixes_unit.py  test_interactions.py  test_multi.csv  test_multi.json  test_multi.md  test_simple.py  test_single.json  verify_17.py  verify_fixes.py
.jules/: sentinel.md
chuscraper/: __init__.py  chus_ai.py
docs/: REAL_WORLD_EXAMPLES.md  STEALTH_PROOF.md  ai_features.md  api_guide_v2.md  core_concepts.md  first_script.md  index.md  installation.md  interactions.md  network.md  quickstart.md  selectors.md  stealth.md  stealth_comparison.md
examples/: agoda_90day_scraper.py  agoda_scraper_chuscraper.py  ai_agent_demo.py  ai_mmt_demo.py  amazon_search_product.py  browserscan.py  demo.py  easy_syntax_demo.py  expect_download.py  fetch_domain.py  flipkart_scraper.py  google_shopping_compare.py  human_behavior_demo.py  imgur_upload_image.py  lead_scraping_demo.py  makemytrip_flight_search.py  manual_control_demo.py  mmt_hotel_stress_test.py  mmt_scraper_chuscraper.py  mobile_inspector.py  mouse_drag_boxes.py  network_monitor.py  production_advanced_site_template.py  robus_stealth_test_2026.py  scrape_mmt_auth_stealth.py  scrape_mmt_listing.py  set_user_agent.py  stealth_check_2026.py  stealth_check_2026_headless.py  stealth_proof_audit.py  stealth_realworld_audit.py  test_creepjs_long.py  wait_for_page.py  walmart_search.py
scripts/: deep_health_check.py  format.sh  generate_cdp.py  lint.sh  mkdocs_generate_reference.py  release.py  test.sh
tests/: Dockerfile  check_proxy.py  conftest.py  debug_qs.py  next_test.sh  production_suite.py  repro_concurrency.py  stealth_audit.py  test_adb.py  test_agoda.py  test_agoda_flow.py  test_ai_extraction.py  test_convenience.py  test_crawler_basic.py  test_crawler_comprehensive.py  test_crawler_formats.py  test_crawler_manual.py  test_crawler_memory.py  test_crawler_streaming.py  test_eval.py  test_formats_all.py  test_interactions.py  test_interactions_production.py  test_mobile.py  test_mobile_stress.py  test_neurofiq.py  test_security_dom.py  test_security_fixes.py  test_sitemap.py  (+3 more)
(+142 files in other folders)
